[tool.poetry]
name = "Moulin Rouge"
version = "0.1.0"
description = "The West Calls"
authors = ["Thamires Falbo <111710331+thamiresfalbo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.2"
esper = "^2.5"
tcod = "^16.1.1"
attrs = "^23.1.0"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
