[project]
name = "moulin-rouge"
version = "0.1.1"
description = "."
authors = [
    { name = "Thamires Falbo", email = "111710331+thamiresfalbo@users.noreply.github.com" },
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "numpy>=1.25.2,<2",
    "esper~=2.5",
    "tcod>=16.1.1,<17",
    "attrs>=23.1.0,<24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
